force-app/main/default/objects/UWM_Insights_Mapping__mdt/UWM_Insights_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>UWM Insights Mapping</label>
    <pluralLabel>UWM Insights Mappings</pluralLabel>
</CustomObject>