force-app/main/default/objects/UWM_Insights_Mapping__mdt/fields/Convert_Datetime_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Convert_Datetime_to_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert Datetime to Date</label>
    <type>Checkbox</type>
</CustomField>