force-app/main/default/objects/UWM_Insights_Mapping__mdt/fields/Datatype__c.field-meta.xml
<CustomField>
    <fullName>Datatype__c</fullName>
    <label>Datatype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
                <default>true</default>
                <label>Boolean</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>