force-app/main/default/objects/UWM_Insights_Mapping__mdt/fields/Decimal_Length__c.field-meta.xml
<CustomField>
    <fullName>Decimal_Length__c</fullName>
    <label>Decimal Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>