force-app/main/default/objects/UWM_Insights_Mapping__mdt/fields/Transaction_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Field_API_Name__c</fullName>
    <label>Transaction Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>