force-app/main/default/objects/UWM_Insights_Mapping__mdt/fields/UWM_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>UWM_Field_Name__c</fullName>
    <label>UWM Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>